--- a/about.html
+++ b/about.html
@@ -24,6 +24,8 @@
 
 <div class="padding"></div>
 <div class="padding"></div>
+<div class="padding"></div>
+<div class="padding"></div>
 
 <!-- Nav Bar Start -->
 <div class="container">
@@ -57,9 +59,6 @@
 </div>
 <!-- Nav Bar End -->
 
-<div class="padding"></div>
-<div class="padding"></div>
-
 <!-- Body Start -->
 <div class="container">
   <div class="page-header">Alpha Kappa Psi</div>
@@ -72,9 +71,9 @@
 <div class="padding"></div>
 
 <div class="container">
-    <p>Alpha Kappa Psi was founded at New York University on October 5, 1904 and later incorporated on May 20, 1905. As an international professional business fraternity, Alpha Kappa Psi aims to educate the public and to further the welfare of its members. With over 240,000 initiated brothers, Alpha Kappa Psi is the largest co-ed professional fraternity with over 300 collegiate chapters in the US, Canada, UK and Hong Kong. The organization is currently headquartered in Indianpolis at the Heritage Center, where the fraternity's staff works. The Heritage Center is also home to the fraternity's own philanthropical organization, the Alpha Kappa Psi Foundation.<br>Fraternity facts:</p>
+    <p>Alpha Kappa Psi was founded at New York University on October 5, 1904 and later incorporated on May 20, 1905. As an international professional business fraternity, Alpha Kappa Psi aims to educate the public and to further the welfare of its members. With over 240,000 initiated brothers, Alpha Kappa Psi is the largest co-ed professional fraternity with over 300 collegiate chapters in the US, Canada, UK and Hong Kong. The organization is currently headquartered in Indianpolis at the Heritage Center, where the staff organizes the day-to-day operations of the fraternity. The Heritage Center is also home to the fraternity's own philanthropical organization, the Alpha Kappa Psi Foundation. Here are some key facts about the fraternity:</p>
     <ul>
-      <li><b>Membership:</b> 240,000 members world-wide</li>
+      <li><b>Membership:</b> 240,000+ members world-wide</li>
       <li><b>Chapters:</b> 300+ chapters</li>
       <li><b>Colors:</b> Navy and Gold</li>
       <li><b>Symbol:</b> Phoenician Galley</li>
@@ -101,6 +100,8 @@
 
 <!-- Bottom Nav Bar End -->
 
+<div class="padding"></div>
+<div class="padding"></div>
 <div class="padding"></div>
 <div class="padding"></div>
 
