--- a/alphalambda.html
+++ b/alphalambda.html
@@ -24,6 +24,8 @@
 
 <div class="padding"></div>
 <div class="padding"></div>
+<div class="padding"></div>
+<div class="padding"></div>
 
 <!-- Nav Bar Start -->
 <div class="container">
@@ -57,18 +59,14 @@
 </div>
 <!-- Nav Bar End -->
 
-<div class="padding"></div>
-<div class="padding"></div>
-
 <!-- Body Start -->
 <div class="container">
   <div class="page-header">Alpha Lambda Chapter</div>
-    <p>The Alpha Lambda Chapter at Washington University in St. Louis became the 34th Chapter of Alpha Kappa Psi on May 16, 1923. Since our installation, we have graduated over 500 members. We welcome students from all undergraduate programs, which has created a diverse network of young professionals with a common interest in business. Our chapter is held to the highest standards, and we are proud of our leadership and involvement throughout a variety of organizations and events on and off campus.</p>
+    <p>The Alpha Lambda Chapter at Washington University in St. Louis became the 34th Chapter of Alpha Kappa Psi on May 16, 1923. Since our installation, we have graduated over 500 members. We welcome students from all undergraduate programs, which has created a diverse network of young professionals with a common interest in business. Our chapter is held to the highest standards, and we are proud of our leadership and involvement throughout a variety of student organizations and events on and off campus.</p>
 
   <div class="padding"></div>
-  <div class="padding"></div>
 
-    <p>Have you ever wondered who makes up Alpha Kappa Psi at Washington University? Learn more about our brotherhood with a diverse set of interests, skills, majors and minors!</p>
+    <p>Have you ever wondered who makes up Alpha Kappa Psi at Washington University? Learn more about our brotherhood, which has a diverse set of interests, skills and experiences!</p>
     <iframe width=600 height=1987 frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/5330921-untitled-report"></iframe>
 </div>
 
@@ -89,6 +87,8 @@
 
 <!-- Bottom Nav Bar End -->
 
+<div class="padding"></div>
+<div class="padding"></div>
 <div class="padding"></div>
 <div class="padding"></div>
 
