--- a/careers.html
+++ b/careers.html
@@ -24,6 +24,8 @@
 
 <div class="padding"></div>
 <div class="padding"></div>
+<div class="padding"></div>
+<div class="padding"></div>
 
 <!-- Nav Bar Start -->
 <div class="container">
@@ -66,6 +68,10 @@
   <div class="col-md-12">
     <div class="section-header">Join the World's Largest Professional Network</div>
       <p>Alpha Kappa Psi's extensive professional network provides a wide range of connections and advantages in the job market. As the world's largest business fraternity, our brothers have a variety of experiences and can gain valuable leadership and interpersonal skills working with the chapters. Whether you are interested in working in fields ranging from biomedical engineering to design to finance, Alpha Kappa Psi can help you develop the professional skills necessary to navigate your career.</p>
+
+    <div class="padding"></div>
+    <div class="padding"></div>
+
     <div class="section-header">Our Professional Events</div>
       <p>Each semester, the Alpha Lambda chapter hosts a variety of professional events. We are always looking to co-program with other student organizations or working with employers. Please contact our VP of Professional at <a href="mailto:wu.akpsi@gmail.com?Subject=Hello,%20AKPsi!" target="_top">wu.akpsi@gmail.com</a> for any questions or inquiries regarding our professional events. 
       <br>Here are some of our past professional events and resources:</p>
@@ -77,29 +83,35 @@
           <li>Bi-Weekly Current Events Roundtable Discussion</li>
           <li>Meet & Greet with Protiviti to learn about consulting</li>
         </ul>
+
+    <div class="padding"></div>
+    <div class="padding"></div>
+
     <div class="section-header">Companies We Work For</div>
       <div class="row">
+        <div class="companies">
         <div class="col-md-3">
         <div class="thumbnail">
-          <img src="https://s3.amazonaws.com/image.infoarmy/1398306725083.png" alt="zsassociates">
+          <img src="https://s3.amazonaws.com/image.infoarmy/1398306725083.png" alt="zsassociates" class="img-responsive">
+        </div>
         </div>
         </div>
 
         <div class="col-md-3">
         <div class="thumbnail">
-          <img src="http://static1.squarespace.com/static/53811f41e4b0f219e1f7144c/53c050bee4b06790c08012d1/53c05166e4b03b9c179f4ce1/1405112678368/bloomingdales.png" alt="bloomingdales">
+          <img src="http://static1.squarespace.com/static/53811f41e4b0f219e1f7144c/53c050bee4b06790c08012d1/53c05166e4b03b9c179f4ce1/1405112678368/bloomingdales.png" alt="bloomingdales" width="300" height="300" class="img-responsive">
         </div>
         </div>
 
         <div class="col-md-3">
         <div class="thumbnail">
-          <img src="http://www.askeachother.com/images/uploads/large/2011-04-08-4313023_Bank-of-America-2000.png" alt="bankofamerica">
+          <img src="http://www.askeachother.com/images/uploads/large/2011-04-08-4313023_Bank-of-America-2000.png" alt="bankofamerica" width="300" height="300" class="img-responsive">
         </div>
         </div>
 
         <div class="col-md-3">
         <div class="thumbnail">
-          <img src="http://1.bp.blogspot.com/-8a4nlXTIA28/TqRW2I_wCjI/AAAAAAAAgkc/k9HvgGn3K_U/s1600/delta_airlines_logo9.png" alt="deltaairlines">
+          <img src="http://1.bp.blogspot.com/-8a4nlXTIA28/TqRW2I_wCjI/AAAAAAAAgkc/k9HvgGn3K_U/s1600/delta_airlines_logo9.png" alt="deltaairlines" class="img-responsive">
         </div>
         </div>
       </div>
@@ -200,6 +212,8 @@
 
 <!-- Bottom Nav Bar End -->
 
+<div class="padding"></div>
+<div class="padding"></div>
 <div class="padding"></div>
 <div class="padding"></div>
 
