--- a/executiveboard.html
+++ b/executiveboard.html
@@ -24,6 +24,8 @@
 
 <div class="padding"></div>
 <div class="padding"></div>
+<div class="padding"></div>
+<div class="padding"></div>
 
 <!-- Nav Bar Start -->
 <div class="container">
@@ -57,9 +59,6 @@
 </div>
 <!-- Nav Bar End -->
 
-<div class="padding"></div>
-<div class="padding"></div>
-
 <!-- Body Start -->
 <div class="container">
 <div class="page-header">Meet Our Executive Board</div>
@@ -71,7 +70,7 @@
         <div class="caption">
           <div class="thumbnail-header">President</div>
           <div class="thumbnail-secondary-header">Sam Gorsche</div>
-          <div class="thumbnail-description">Class of 2015<br>Studying: Economics, Political Science & Finance</div>
+          <div class="thumbnail-description">Class of 2015<br>Economics, Political Science<br>& Finance</div>
         </div>
       </div>
     </div>
@@ -82,7 +81,7 @@
         <div class="caption">
           <div class="thumbnail-header">VP of Administration</div>
           <div class="thumbnail-secondary-header">Casey Wagenaar</div>
-          <div class="thumbnail-description">Class of 2017<br>Studying: Accounting, Finance & Political Science</div>
+          <div class="thumbnail-description">Class of 2017<br>Accounting, Finance<br>& Political Science</div>
         </div>
       </div>
     </div>
@@ -93,7 +92,7 @@
         <div class="caption">
           <div class="thumbnail-header">VP of Human Resources</div>
           <div class="thumbnail-secondary-header">Evan Hindes</div>
-          <div class="thumbnail-description">Class of 2015<br>Studying: Marketing, International Business & Spanish</div>
+          <div class="thumbnail-description">Class of 2015<br>Marketing, International Business<br>& Spanish</div>
         </div>
       </div>
     </div>
@@ -104,7 +103,7 @@
         <div class="caption">
           <div class="thumbnail-header">Treasurer</div>
           <div class="thumbnail-secondary-header">Anjan Narain</div>
-          <div class="thumbnail-description">Class of 2017<br>Studying: Finance & Computer Science</div>
+          <div class="thumbnail-description">Class of 2017<br>Finance & Computer Science</div>
         </div>
       </div>
     </div>
@@ -119,7 +118,7 @@
         <div class="caption">
           <div class="thumbnail-header">VP of Membership</div>
           <div class="thumbnail-secondary-header">Shrey Aggarwal</div>
-          <div class="thumbnail-description">Class of 2017<br>Studying: Finance, Computer Science & Economics</div>
+          <div class="thumbnail-description">Class of 2017<br>Finance, Computer Science<br>& Economics</div>
         </div>
       </div>
     </div>
@@ -128,9 +127,9 @@
       <div class="thumbnail">
         <img src="http://i.imgur.com/Mc5rMND.jpg" alt="vpprofessional" width="200" height="200" class="img-responsive">
         <div class="caption">
-          <div class="thumbnail-header">VP of Professional Development</div>
+          <div class="thumbnail-header">VP of Professional</div>
           <div class="thumbnail-secondary-header">Tyler Friedman</div>
-          <div class="thumbnail-description">Class of 2015<br>Studying: Finance & History</div>
+          <div class="thumbnail-description">Class of 2015<br>Finance & History</div>
         </div>
       </div>
     </div>
@@ -141,7 +140,7 @@
         <div class="caption">
           <div class="thumbnail-header">VP of Recruitment</div>
           <div class="thumbnail-secondary-header">Siena Dixon</div>
-          <div class="thumbnail-description">Class of 2016<br>Studying: Archaeology & Psychology</div>
+          <div class="thumbnail-description">Class of 2016<br>Archaeology & Psychology</div>
         </div>
       </div>
     </div>
@@ -152,7 +151,7 @@
         <div class="caption">
           <div class="thumbnail-header">VP of Recruitment</div>
           <div class="thumbnail-secondary-header">Ellie Cooney</div>
-          <div class="thumbnail-description">Class of 2017<br>Studying: Accounting & Finance</div>
+          <div class="thumbnail-description">Class of 2017<br>Accounting & Finance</div>
         </div>
       </div>
     </div>
@@ -167,7 +166,7 @@
         <div class="caption">
           <div class="thumbnail-header">VP of Marketing</div>
           <div class="thumbnail-secondary-header">Ophelia Chen</div>
-          <div class="thumbnail-description">Class of 2017<br>Studying: Marketing & Economics and Strategy</div>
+          <div class="thumbnail-description">Class of 2017<br>Marketing &<br>Economics and Strategy</div>
         </div>
       </div>
     </div>
@@ -178,7 +177,7 @@
         <div class="caption" >
           <div class="thumbnail-header">VP of Philanthropy</div>
           <div class="thumbnail-secondary-header">Weber Gaowen</div>
-          <div class="thumbnail-description">Class of 2018<br>Studying: Chemistry & Business</div>
+          <div class="thumbnail-description">Class of 2018<br>Chemistry & Business</div>
         </div>
       </div>
     </div>
@@ -189,7 +188,7 @@
         <div class="caption">
           <div class="thumbnail-header">VP of Brotherhood</div>
           <div class="thumbnail-secondary-header">Jessie Prussick</div>
-          <div class="thumbnail-description">Class of 2017<br>Studying: Finance</div>
+          <div class="thumbnail-description">Class of 2017<br>Finance</div>
         </div>
       </div>
     </div>
@@ -200,7 +199,7 @@
         <div class="caption">
           <div class="thumbnail-header">VP of Brotherhood</div>
           <div class="thumbnail-secondary-header">Katherine Odom</div>
-          <div class="thumbnail-description">Class of 2017<br>Studying: Marketing, Psychology & Public Health</div>
+          <div class="thumbnail-description">Class of 2017<br>Marketing, Psychology &<br>Public Health</div>
         </div>
       </div>
     </div>
@@ -215,7 +214,7 @@
         <div class="caption">
           <div class="thumbnail-header">VP of Alumni Relations</div>
           <div class="thumbnail-secondary-header">Morgan Hess</div>
-          <div class="thumbnail-description">Class of 2017<br>Studying: Finance, Marketing & Mathematics</div>
+          <div class="thumbnail-description">Class of 2017<br>Finance, Marketing & Mathematics</div>
         </div>
       </div>
     </div>
@@ -226,7 +225,7 @@
         <div class="caption">
           <div class="thumbnail-header">Master of Rituals</div>
           <div class="thumbnail-secondary-header">Kenny Dolgin</div>
-          <div class="thumbnail-description">Class of 2015<br>Studying: Finance & Economics and Strategy</div>
+          <div class="thumbnail-description">Class of 2015<br>Finance & Economics and Strategy</div>
         </div>
       </div>
     </div>
@@ -237,7 +236,7 @@
         <div class="caption">
           <div class="thumbnail-header">Assistant Treasurer</div>
           <div class="thumbnail-secondary-header">Arjun Gandhi</div>
-          <div class="thumbnail-description">Class of 2017<br>Studying: International and Area Studies & Economics and Strategy</div>
+          <div class="thumbnail-description">Class of 2017<br>International and Area Studies & Economics and Strategy</div>
         </div>
       </div>
     </div>
@@ -248,7 +247,7 @@
         <div class="caption">
           <div class="thumbnail-header">Webmaster</div>
           <div class="thumbnail-secondary-header">Jarian Cottingham</div>
-          <div class="thumbnail-description">Class of 2017<br>Studying: Computer Science & Entrepreneurship</div>
+          <div class="thumbnail-description">Class of 2017<br>Computer Science & Entrepreneurship</div>
         </div>
       </div>
     </div>
@@ -273,6 +272,8 @@
 
 <!-- Bottom Nav Bar End -->
 
+<div class="padding"></div>
+<div class="padding"></div>
 <div class="padding"></div>
 <div class="padding"></div>
 
