--- a/facultyadvisor.html
+++ b/facultyadvisor.html
@@ -24,6 +24,8 @@
 
 <div class="padding"></div>
 <div class="padding"></div>
+<div class="padding"></div>
+<div class="padding"></div>
 
 <!-- Nav Bar Start -->
 <div class="container">
@@ -57,9 +59,6 @@
 </div>
 <!-- Nav Bar End -->
 
-<div class="padding"></div>
-<div class="padding"></div>
-
 <!-- Body Start -->
 <div class="container">
   <div class="page-header">Faculty Advisor</div>
@@ -69,7 +68,7 @@
     </div>
 
     <div class="col-md-10">
-      <div class="subsection-header">Yoon Groves</div>
+      <div class="faculty-header">Yoon Groves</div>
       <p>Associate Director for Advising and Student Services
       <br>Student Services, Olin Business School
       <br>Washington University in St. Louis
@@ -96,6 +95,8 @@
 
 <!-- Bottom Nav Bar End -->
 
+<div class="padding"></div>
+<div class="padding"></div>
 <div class="padding"></div>
 <div class="padding"></div>
 
