--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
 <div class="padding"></div>
 <div class="padding"></div>
+<div class="padding"></div>
+<div class="padding"></div>
 
 <!-- Nav Bar Start -->
 <div class="container">
@@ -57,9 +59,6 @@
 </div>
 <!-- Nav Bar End -->
 
-<div class="padding"></div>
-<div class="padding"></div>
-
 <!-- Body Start -->
 <div class="container">
 <div class="page-header">The Premier Developer of Principled Business Leaders</div>
@@ -82,17 +81,17 @@
   <div class="section-header">Announcements</div>
     <div class="col-md-4">
       <div class="subsection-header">Tuesday, April 14, 2015</div>
-      <p>Our Spring 2015 Pledge Class was initiated into the brotherhood! The Alpha Lambda chapter is proud of all that you have accomplished this semester during the pledging process and are looking forward to all of your professional development, personal growth and overall success as brothers.</p>
+      <p>Our Spring 2015 Pledge Class was initiated into the brotherhood! The Alpha Lambda chapter is proud of all that you have accomplished this semester during the pledging process and are looking forward to all of your professional development, personal growth and overall success as brothers. We cannot wait to see what you will bring to the fraternity.</p>
     </div>
 
     <div class="col-md-4">
       <div class="subsection-header">Thursday, April 23, 2015</div>
-      <p>The Alpha Lambda chapter will be hosting its end-of-semester Yellow Rose Formal at Gallery 400 in Downtown St. Louis in celebration of our brotherhood and all of our hard work. As well, we will be saying goodbye to the graduating seniors, as this is one of their last events and last formal with the chapter while at Washington University.</p>
+      <p>The Alpha Lambda chapter hosted its end-of-semester Yellow Rose Formal at Gallery 400 in Downtown St. Louis in celebration of our brotherhood and all of our hard work these past few months. As well, we had the opportunity to say goodbye to the graduating seniors, as this was one of their last events and their last formal with the chapter.</p>
     </div>
 
     <div class="col-md-4">
       <div class="subsection-header">Sunday, April 26, 2015</div>
-      <p>At Elections, the Alpha Lambda chapter will be voting to fill all semester-long positions for Fall 2015 and the three full year positions President, Treasurer and VP Human Resources for the 2015-2016 academic year. The entire brotherhood is encouraged to run for a position, including newly initiated brothers. Best of luck to all those running!</p>
+      <p>At Elections, the Alpha Lambda chapter voted to fill all semester-long positions for Fall 2015 and the three full year positions President, Treasurer and VP Human Resources for the 2015-2016 academic year. Congratulations to our new Executive Board! We cannot wait to see what new ideas you will bring to your leadership roles.</p>
     </div>
 </div>
 <!-- Body End -->
@@ -112,6 +111,8 @@
 
 <!-- Bottom Nav Bar End -->
 
+<div class="padding"></div>
+<div class="padding"></div>
 <div class="padding"></div>
 <div class="padding"></div>
 
