--- a/rush.html
+++ b/rush.html
@@ -24,6 +24,8 @@
 
 <div class="padding"></div>
 <div class="padding"></div>
+<div class="padding"></div>
+<div class="padding"></div>
 
 <!-- Nav Bar Start -->
 <div class="container">
@@ -57,9 +59,6 @@
 </div>
 <!-- Nav Bar End -->
 
-<div class="padding"></div>
-<div class="padding"></div>
-
 <!-- Body Start -->
 <div class="container">
   <div class="page-header">Rush Alpha Kappa Psi</div>
@@ -76,15 +75,25 @@
     <div class="col-md-8">
       <div class="section-header">Why rush AKPsi?</div>
         <p>Alpha Kappa Psi provides a community of brothers and a professional network that offer support and guidance for career development during college and as alumni. Our selective recruitment process takes place at the beginning of each semester. To learn more about our organization, please refer to our resources on <a href="about.html">Alpha Kappa Psi</a> and the <a href="alphalambda.html">Alpha Lambda Chapter</a>.</p>
+
+      <div class="padding"></div>
+      <div class="padding"></div>
+
       <div class="section-header">What is the recruitment process?</div>
         <p>Our recruitment process involves a series of events over several events for rushees to come and meet the brotherhood. This take place in a relaxed setting where rushees have the opportunity to learn more about the chapter, get a taste of our events, and get a feel for the brotherhood. Rush generally includes two information sessions, one Ice Cream Social, one Speed Dating event, and two closed events.</p>
+
+      <div class="padding"></div>
+      <div class="padding"></div>
+
       <div class="section-header">Qualifications for Membership</div>
         <p>In order to be eligible to participate in the pledge process of Alpha Kappa Psi, a student must meet the following requirements:</p>
+        <ul>
           <li>Is an undergraduate student at Washington University in good standing with the school (open to all majors)</li>
           <li>Attends at least one open rush event</li>
-          <li>Displays genuine interest in business</li>
+          <li>Displays a genuine interest in business</li>
           <li>Demonstrates ethical and professional character</li>
           <li>Embodies the ideals of brotherhood, integrity, unity, knowledge and service</li>
+        </ul>
 
       <div class="padding"></div>
       <div class="padding"></div>
@@ -92,10 +101,19 @@
       <div class="section-header">Frequently Asked Questions</div>
         <div class="question">When can I rush AKPsi?</div>
         <div class="answer">Washington University allows students to rush professional fraternities as early as first semester freshman year. A majority of our recruitment comes from the freshman and sophomore classes.</div>
+
+        <div class="padding"></div>
+
         <div class="question">What happens during the pledging process?</div>
         <div class="answer">After receiving a bid at the end of the recruitment process, a pledge is given the opportunity to learn about the fraternity and become a member of the brotherhood by the end of the semester.</div>
+
+        <div class="padding"></div>
+
         <div class="question">What is the time commitment required to be a part of AKPsi?</div>
         <div class="answer">As a pledge, you are required to attend weekly pledge class meetings. As a brother, you are required to attend in Chapter Meetings. Both pledges and brothers are asked to participate in various professional, philanthropic and brotherhood events that take place throughout the semester.</div>
+
+        <div class="padding"></div>
+
         <div class="question">Am I allowed to participate in Greek Life?</div>
         <div class="answer">AKPsi includes brothers who are members of social sororities and fraternities, as well as brothers who do no participate in Greek Life. Regardless of your other commitments, whether they are in Greek Life or not, AKPsi does have a time commitment that is important to consider in your college career.</div>
 
@@ -109,19 +127,25 @@
           </div>
           <div class="col-md-8">
             <p>"Being a part of AKPsi has been a transformative experience for me. I have not only gained a family, but I have also enhanced my professional skills in ways I never imagined. This chapter has given me leadership opportunities that have shaped my college career."</p>
-            <p>Samantha Hindes, Class of 2016<br>Former VP of Administration</p>
+            <div class="name">Samantha Hindes, Class of 2016<br>Former VP of Administration</div>
           </div>
         </div>
+
+        <div class="padding"></div>
+        <div class="padding"></div>
 
         <div class="row">
           <div class="col-md-8">
             <p>"This chapter has provided with a professional network, as well as a network of lifelong friends. The connections I have formed with the brotherhood will continue on past my college experience."</p>
-            <p>Dylan Stone, Class of 2015<br>Former VP of Administration, VP of Professional, VP of Membership and Master of Rituals</p>
+            <div class="name">Dylan Stone, Class of 2015<br>Former VP of Administration, VP of Professional, VP of Membership and Master of Rituals</div>
           </div>
           <div class="col-md-4">
             <img src="http://i.imgur.com/mQOh8UC.jpg" alt="dylan" width="300" height="300" class="img-responsive">
           </div>
         </div>
+
+        <div class="padding"></div>
+        <div class="padding"></div>
 
         <div class="row">
           <div class="col-md-4">
@@ -129,26 +153,33 @@
           </div>
           <div class="col-md-8">
             <p>"AKPsi has given me access to a diverse network of business-minded students across multiple disciplines. Older brothers in the chapter have provided useful advice and guidance in my career search."</p>
-            <p>Alison Schwartz, Class of 2015</p>
+            <div class="name">Alison Schwartz, Class of 2015</div>
           </div>
         </div>
+
+    <div class="padding"></div>
+    <div class="padding"></div>
+    <div class="padding"></div>
+    <div class="padding"></div>
+
     </div>
 
     <div class="col-md-4">
       <div class="section-header">Rush Calendar</div>
-      <p>Spring Rush begins at the end of January 2015! Our main events include:</p>
-        <div class="rush-event">Information Session #1 - 1/20</div>
-        <div class="rush-event">Information Session #2 - 1/21</div>
-        <div class="rush-event">Ice Cream Social - 1/23</div>
-        <div class="rush-event">Speed Dating - 1/25</div>
-        <div class="rush-event">Closed Rush Event #1 (Invite Only) - 2/6</div>
-        <div class="rush-event">Closed Rush Event #2 (Invite Only) - 2/8</div>
-      <br>
+      <p>Spring Rush begins at the end of January 2015. Our main events include:</p>
+      <ul>
+        <li>Information Session #1 - 1/20</li>
+        <li>Information Session #2 - 1/21</li>
+        <li>Ice Cream Social - 1/23</li>
+        <li>Speed Dating - 1/25</li>
+        <li>Closed Rush Event #1 (Invite Only) - 2/6</li>
+        <li>Closed Rush Event #2 (Invite Only) - 2/8</li>
+      </ul>
       <p>The Fall 2015 Rush Calendar will be posted during August 2015. Stay tuned!</p>
     </div>
 
-    <div class="padding"></div>
-    <div class="padding"></div>
+<div class="padding"></div>
+<div class="padding"></div>
 
     <div class="col-md-12">
      <p>Please contact our Rush Chairs Siena Dixon and Ellie Cooney at <a href="mailto:wu.akpsi@gmail.com?Subject=Hello,%20AKPsi!" target="_top">wu.akpsi@gmail.com</a> for any questions regarding the recruitment process.</p>
@@ -172,6 +203,8 @@
 
 <!-- Bottom Nav Bar End -->
 
+<div class="padding"></div>
+<div class="padding"></div>
 <div class="padding"></div>
 <div class="padding"></div>
 
