--- a/index.html
+++ b/index.html
@@ -22,17 +22,24 @@
 
   <body>
 
+<!-- Footer Start -->
+
+<div class="footerbar"></div>
+
+<!-- Footer End -->
+
 <div class="padding"></div>
 <div class="padding"></div>
 <div class="padding"></div>
 <div class="padding"></div>
+
 
 <!-- Nav Bar Start -->
 <div class="container">
   <div class="row>">
     <div class="header-image"><img src="http://upload.wikimedia.org/wikipedia/en/0/0d/Akpsi-coa.png" align="center" alt="" width="50" height="80" class="img-responsive"></div>
     <div class="header">Alpha Kappa Psi</div>
-    <div class="subheader">Alpha Lambda | Washington University in St. Louis</div>
+    <div class="sub">Alpha Lambda | Washington University in St. Louis</div>
 
     <ul class="nav nav-pills">
     <li role="presentation"><a href="index.html">Home</a></li>
@@ -101,12 +108,14 @@
 
 <!-- Bottom Nav Bar Start -->
 
+<div class="bottom-nav">
 <div class="container">
   <ul class="nav nav-pills">
     <li role="presentation"><a href="mailto:wu.akpsi@gmail.com?Subject=Hello,%20AKPsi!" target="_top">Email</a></li>
     <li role="presentation"><a href="https://www.facebook.com/AlphaKappaPsiWUSTL">Facebook</a></li>
     <li role="presentation"><a href="https://www.linkedin.com/groups/Alpha-Kappa-Psi-Professional-Business-3767223/about">LinkedIn</a></li>
   </ul>
+</div>
 </div>
 
 <!-- Bottom Nav Bar End -->
@@ -115,6 +124,12 @@
 <div class="padding"></div>
 <div class="padding"></div>
 <div class="padding"></div>
+
+<!-- Footer Start -->
+
+<div class="footerbar"></div>
+
+<!-- Footer End -->
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
