--- a/brothers.html
+++ b/brothers.html
@@ -22,6 +22,14 @@
 
   <body>
 
+<!-- Footer Start -->
+
+<div class="footerbar"></div>
+
+<!-- Footer End -->
+
+<div class="padding"></div>
+<div class="padding"></div>
 <div class="padding"></div>
 <div class="padding"></div>
 
@@ -292,6 +300,12 @@
 <div class="padding"></div>
 <div class="padding"></div>
 <div class="padding"></div>
+
+<!-- Footer Start -->
+
+<div class="footerbar"></div>
+
+<!-- Footer End -->
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
