--- a/about.html
+++ b/about.html
@@ -22,6 +22,12 @@
 
   <body>
 
+<!-- Footer Start -->
+
+<div class="footerbar"></div>
+
+<!-- Footer End -->
+
 <div class="padding"></div>
 <div class="padding"></div>
 <div class="padding"></div>
@@ -104,6 +110,12 @@
 <div class="padding"></div>
 <div class="padding"></div>
 <div class="padding"></div>
+
+<!-- Footer Start -->
+
+<div class="footerbar"></div>
+
+<!-- Footer End -->
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
