--- a/rush.html
+++ b/rush.html
@@ -36,11 +36,13 @@
 <!-- Nav Bar Start -->
 <div class="container">
   <div class="row>">
-    <div class="header-image"><img src="http://upload.wikimedia.org/wikipedia/en/0/0d/Akpsi-coa.png" alt="" width="50" height="80" class="img-responsive"></div>
     <div class="header">Alpha Kappa Psi</div>
-    <div class="subheader">Alpha Lambda | Washington University in St. Louis</div>
+    <div class="sub">Alpha Lambda | Washington University in St. Louis</div>
 
-    <ul class="nav nav-pills">
+    <div class="padding"></div>
+    <div class="padding"></div>
+
+    <ul class="nav nav-pills nav-justified">
     <li role="presentation"><a href="index.html">Home</a></li>
     <li role="presentation" class="dropdown">
       <a class="dropdown-toggle" data-toggle="dropdown" href="brothers.html" role="button" aria-expanded="false">About Us<span class="caret"></span></a>
@@ -200,7 +202,7 @@
 <!-- Bottom Nav Bar Start -->
 
 <div class="container">
-  <ul class="nav nav-pills">
+  <ul class="nav nav-pills nav-justified">
     <li role="presentation"><a href="mailto:wu.akpsi@gmail.com?Subject=Hello,%20AKPsi!" target="_top">Email</a></li>
     <li role="presentation"><a href="https://www.facebook.com/AlphaKappaPsiWUSTL">Facebook</a></li>
     <li role="presentation"><a href="https://www.linkedin.com/groups/Alpha-Kappa-Psi-Professional-Business-3767223/about">LinkedIn</a></li>
